--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 .nav1 {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     gap: 20px;
 }
