--- a/style.css
+++ b/style.css
@@ -267,9 +267,10 @@ h3 {
 
 @media (max-width:960px) {
     .profile {
-        flex-wrap: wrap;
+        flex-direction:column;
         height: auto;
         align-items: center;
+        justify-content:center;
     }
 
     .board {
